ansible/roles/gateway/templates/gateway_object.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: main-gateway
  namespace: envoy-gateway-system 
spec:
  gatewayClassName: envoy
  listeners:
  - name: default
    hostname: "*.kurganov.com"
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
