ansible/roles/gateway/templates/kyverno-policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-privileged-containers
spec:
  validationFailureAction: Enforce
  background: true

  rules:
    - name: disallow-privileged
      match:
        any:
          - resources:
              kinds:
                - Pod
              namespaces:
                - default

      validate:
        message: "Privileged containers are not allowed."

        pattern:
          spec:
            containers:
              - securityContext:
                  privileged: false
